--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,138 @@
-*{
+* { /*normaliza cuerpo*/
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Raleway;
+  list-style-type: none;
+  cursor: default;
 }
-
-#cont {
-  background-color: #625F5C;
-  height: 40px;
-  widows: 100%;
-  color: #fff;
-  font-size:20px;
+.navbtn {
+  float: left;
+  list-style-type: none;
+  background-color: #343A40;
+  height: 55px;
+  width: 100%;
+  z-index: 1;
+}
+.stbts {
+  float: left;
+  font-weight: bold;
+  cursor: pointer;
+  color:#fff;
+}
+a:hover {
+  color:#fff;
+}
+li {
+  float: right;
+  padding-right: 1%;
+  padding-left: 1.5%;
+  padding-top: 1%;
+  padding-bottom: 0;
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color:#8F9296;
 }
 
 #img1 {
   background-image: url("../img/header.jpg");
-  height: 517px;
-  background-repeat: no-repeat;
-  background-position: 0 50%;
   background-size: cover;
+  width: 100%;
+  height: 522px;
+  background-attachment: scroll;
+  background-size: 100% 100%;
 }
+
+p.onepage {
+  font-size: 90px;
+  text-align: center;
+  color: white;
+  padding-top: 110px;
+  font-weight: 300;
+}
+
+.fa-bars {
+  float: right;
+  cursor: pointer;
+}
+
+.fa-bars:before {
+  line-height: 37px;
+}
+
+.willrock {
+  text-align: center;
+  font-size:50px;
+  color:#fff;
+}
+.forthose{
+  color#000;
+  font-size: 40px;
+  padding-top: 85px;
+}
+.ftx {
+  color:#000;
+}
+
+#imgs1{
+  background-image: url("../img/rock1.jpg");
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  height: 450px;
+  margin-left: 50px;
+}
+
+#imgs2{
+  background-image: url("../img/rock3.jpg");
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  height: 450px;
+  margin-right: 50px;
+}
+
+#imgs3{
+  background-image: url("../img/rock2.jpg");
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  height: 450px;
+  margin-left: 50px;
+}
+.footer {
+  height: 120px;
+  width: 100%;
+  background-color: #343A40;
+}
+.txtf {
+  text-align: center;
+  padding-top: 40px;
+  color: #fff;
+  font-weight: 400;
+}
+
+@media (max-width: 575px) { /*breakpoint, desaparece menu, aparece el de hamburguesa y cambia la imagen baner a una de 920x400*/
+  li {
+    display: none;
+    }
+    #img1 {
+      background-image: url("../img/smllhand.jpg");
+    }
+    .imgs1,
+    .imgs2,
+    .imgs3 {
+      margin-left: auto;
+      margin-right: auto;
+      background-size: cover;
+    }
+}
+@media (min-width: 576px) {/*breakpoint, pantallas grandes no muestran menu de hamburguesa*/
+  .nnc {
+    display: none;
+  }
+  i.fa.fa-bars {
+    display: none;
+  }
+}
+
